<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/clFragmentAddWorker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="201dp">

        <TextView
            android:id="@+id/tvRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/add_worker"
            android:textColor="#000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvLabelEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/worker_email"
            android:textColor="#000" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/example_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tvErrorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:textColor="#ff0000"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvLabelCompanyPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/company_position"
            android:textColor="#000" />

        <EditText
            android:id="@+id/etCompanyPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/employee_position"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tvErrorCompanyPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:textColor="#ff0000"
            android:visibility="gone" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_as_administrator" />

        <Button
            android:id="@+id/btnAddWorker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#168AAD"
            android:fontFamily="sans-serif-light"
            android:text="@string/add_worker"
            android:textColor="#FFFFFF"
            app:backgroundTint="#168AAD" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>