<resources>
    <!-- General Strings -->
    <string name="app_name">EasyTracker</string>
    <string name="welcome_text">EasyTracker tracks your working time automatically. Just connect to your working device via Bluetooth and a timer in the app will start. You can add, edit and delete entries to build your timesheet, which can then be exported for your authorities, accountants or your boss.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="mail">Mail</string>
    <string name="name">Name</string>
    <string name="worker">Worker</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="create_tracking">Create Tracking</string>
    <string name="edit_tracking">Edit Tracking</string>
    <string name="update_tracking">Update Tracking</string>
    <string name="registration">Registration</string>

    <!-- Registration Form -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="gender">Gender</string>
    <string name="title">Title</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="prefix">Prefix</string>
    <string name="phone_number">Phone Number</string>
    <string name="post_code">Post Code</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="email_hint">john.doe@something.com</string>
    <string name="password_hint">*********</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="show_trackings">Show Trackings</string>
    <string name="my_profile">My Profile</string>
    <string name="create_company">Create Company</string>
    <string name="company_name">Company Name</string>
    <string name="company_position">Position</string>
    <string name="example_email">example@example.com</string>
    <string name="add_as_administrator">Add as administrator</string>
    <string name="add_worker">Add Employee</string>
    <string name="worker_email">Worker Email</string>
    <string name="employee_position">Employee Position</string>
    <string name="invalid_employee_position">Invalid Employee Position</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_password">Change Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="failed_update_password">Update Password failed! Try again!</string>
    <string name="update_settings_succeeded">Profile successfully updated</string>
    <string name="update_password_succeeded">Password successfully updated</string>




    <string-array name="genders">
        <item>None</item>
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>

    <!-- TrackingsAdapter -->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="tracking_name">Tracking Name</string>
    <string name="notes">Notes</string>
    <string name="bluetooth_device">Bluetooth Device</string>
    <string name="save_tracking">Save Tracking</string>
    <string name="back">Back</string>
    <string name="some_notes">Some notes</string>
    <string name="work">Work</string>
    <string name="error_company_exists">Company with this name already exists</string>
    <string name="no_number_title">The title must not contain numbers</string>
    <string name="first_name_required">The first name is required</string>
    <string name="first_name_length">The first name must be between 2 and 255 characters</string>
    <string name="first_name_no_numbers">The first name must not contain numbers</string>
    <string name="company_name_required">The company name is required</string>
    <string name="company_name_length">The company name must be between 2 and 255 characters</string>
    <string name="position_required">The position is required</string>
    <string name="position_name_length">The position must be between 2 and 255 characters</string>
    <string name="position_name_no_numbers">The position must not contain numbers</string>
    <string name="last_name_required">The last name is required</string>
    <string name="last_name_length">The last name must be between 2 and 255 characters</string>
    <string name="last_name_no_numbers">The last name must not contain numbers</string>
    <string name="email_length">The email must be between 5 and 255 characters</string>
    <string name="email_valid_address">The email must be a valid email address</string>
    <string name="dob_required">The date of birth is required</string>
    <string name="dob_format">The date of birth must be of format DD.MM.YYYY</string>
    <string name="phone_prefix_required">The phone prefix is required</string>
    <string name="phone_prefix_digits">The phone prefix must only contain digits</string>
    <string name="phone_prefix_length">The phone prefix must be between 2 and 3 digits</string>
    <string name="phone_nr_required">The phone number is required</string>
    <string name="phone_number_digits">The phone number must only contain digits</string>
    <string name="phone_number_length">The phone number must be between 2 and 12 digits</string>
    <string name="post_code_required">The post code is required</string>
    <string name="post_code_length">The post code must be between 4 and 10 characters</string>
    <string name="city_required">The city is required</string>
    <string name="city_name_format">The city must not contain numbers</string>
    <string name="city_name_length">The city must be between 2 and 255 characters</string>
    <string name="street_required">The street is required</string>
    <string name="street_name_format">The street must contain a street name and a street number</string>
    <string name="username_required">The username is required</string>
    <string name="pw_required">The password is required</string>
    <string name="pw_length">The password must have at least 8 characters</string>
    <string name="email_required">The email is required</string>
    <string name="error_adding_employee">Could not add employee</string>
    <string name="success_adding_employee">Employee has been added successfully</string>
    <string name="error_invalid_start_date_format">The start date must be of format DD.MM.YYYY</string>
    <string name="error_start_date_required">The start date is required</string>
    <string name="error_invalid_end_date_format">The end date must be of format DD.MM.YYYY</string>
    <string name="error_end_date_required">The end date is required</string>
    <string name="error_start_time_required">The start time is required</string>
    <string name="error_invalid_start_time">The start time must be of format H:mm</string>
    <string name="error_end_time_required">The end time is required</string>
    <string name="error_invalid_end_time">The end time must be of format H:mm</string>
    <string name="error_tracking_name_required">The tracking name is required</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="active_tracking">Active Tracking</string>
    <string name="stop_tracking_question">Stop Tracking?</string>
    <string name="do_you_really_want_to_stop_the_tracking_question">Do you really want to stop the tracking?</string>
    <string name="active_tracking_running_since">Active tracking running since</string>
    <string name="success_delete_tracking">Tracking was successfully deleted!</string>
    <string name="fail_delete_tracking">There was an error deleting the tracking!</string>
    <string name="undo_delete_tracking">UNDO</string>
    <string name="tracking_been_created">The tracking has been created!</string>
    <string name="tracking_created">Tracking created</string>
    <string name="tracking_edited">Tracking edited</string>
    <string name="tracking_been_edited">The tracking has been edited!</string>
    <string name="tracking">Trackings</string>
    <string name="dashboard">Dashboard</string>
    <string name="company_overview">Company Overview</string>
    <string name="logout">Logout</string>
    <string name="openDrawer">open Drawer</string>
    <string name="closeDrawer">close Drawer</string>
    <string name="invalid_password_mail">Invalid email or password</string>
    <string name="add_bluetooth_device">Add bluetooth device</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="bluetooth_required_message">Bluetooth is required. Would you like to enable?</string>
    <string name="enable">Enable</string>
    <string name="keep_off">Keep off</string>
    <string name="error">Error</string>
    <string name="error_enable_bluetooth">Enabling Bluetooth failed</string>
    <string name="ok">OK</string>
    <string name="search_devices">Search devices</string>
    <string name="add_device">Add device and pair</string>
    <string name="enter_device_name">Enter device name</string>
    <string name="employees">Employees:</string>
    <string name="export_timesheet">Export Timesheet</string>
    <string name="error_export">No trackings to export!</string>
    <string name="end_date_before_start_date">The starting time is after the end time!</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="pw_matching">The password confirmation does not match</string>

</resources>